fixed word-wrapping in ElementInfo.module.css

--- a/client/src/components/List.module.css
+++ b/client/src/components/List.module.css
@@ -1,6 +1,6 @@
 .ulGrid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, minmax(auto,25%));
     grid-template-rows: repeat(2, 1fr);
     list-style-type: none;
     justify-content: space-around;
